# neug-rust

./: .gitignore  .gitmodules  .release-plz.toml  AGENTS.md  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: release.yml  rust.yml
examples/: simple_example.rs
neug-benchmarks/: Cargo.toml
neug-benchmarks/benches/: database_benchmark.rs
neug-benchmarks/src/: main.rs
neug-bindings/: CHANGELOG.md  Cargo.toml
neug-bindings/benches/: database_benchmark.rs
neug-bindings/examples/: crud_operations.rs  ldbc_snb_macro_bench.rs  parallel_query.rs  simple_example.rs
neug-bindings/src/: connection.rs  database.rs  error.rs  lib.rs  worker.rs
neug-bindings/tests/: test_db_connection.rs
neug-protocol/: CHANGELOG.md  Cargo.toml
neug-protocol/src/: lib.rs
neug-sys/: CHANGELOG.md  Cargo.toml  README.md  build.rs  c_api.cpp  c_api.h
neug-sys/patches/: 0001-fix-dml-buffer-overflows.patch  0002-fix-glog-gflags-export.patch  0003-fix-utf8proc-namespace.patch  0004-fix-build-type-and-werror.patch  0005-fix-arrow-macos-libtool-detection.patch  0006-fix-utf8proc-include-dir.patch  0007-force-local-wal-registration.patch  0008-fix-response-proto-build-order.patch  0009-force-gopt-type-registration.patch  0010-fix-abseil-string-view-and-test-helpers.patch  0011-fix-gflags-export-target-selection.patch  0012-fix-protobuf-utf8-range-static-build.patch
neug-sys/src/: lib.rs
scripts/: verify.sh
src/: connection.rs  lib.rs
tests/: test_db_connection.rs
