[package]
name = "neug-rust"
version = "0.1.0"
edition = "2024"
description = "Safe Rust bindings for the NeuG C++ graph database engine"
license = "Apache-2.0"
repository = "https://github.com/miofthena/neug-rust"
readme = "README.md"
keywords = ["database", "graph", "neug", "ffi"]
categories = ["database"]

exclude = [
    "neug-cpp/tests/*",
    "neug-cpp/doc/*",
    "neug-cpp/docker/*",
    "neug-cpp/example_dataset/*",
    "neug-cpp/examples/*",
    "neug-cpp/tools/java_driver/*",
    "neug-cpp/tools/python_bind/*",
    "neug-cpp/tools/utils/*",
    "neug-cpp/specs/*",
    "neug-cpp/skills/*",
    "neug-cpp/scripts/*",
    "neug-cpp/bin/*",
    "neug-cpp/build/*",
    "neug-cpp/third_party/brpc/*",
    "neug-cpp/third_party/leveldb/*",
    "neug-cpp/third_party/protobuf/java/*",
    "neug-cpp/third_party/protobuf/ruby/*",
    "neug-cpp/third_party/protobuf/php/*",
    "neug-cpp/third_party/protobuf/python/*",
    "neug-cpp/third_party/protobuf/csharp/*",
    "neug-cpp/third_party/protobuf/objectivec/*",
]

[dependencies]
libc = "0.2.183"

[build-dependencies]
bindgen = "0.72.1"
cmake = "0.1.57"

[dev-dependencies]
tempfile = "3.27.0"
