[package]
name = "neug-benchmarks"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false # Benchmarks should not be published to crates.io

[dependencies]
neug-rust = { path = "../neug-bindings" }
rand = "0.8.5"
time = "0.3.47"
tempfile = "3.27.0"
libc = "0.2.183"

[dev-dependencies]
criterion = "0.8.2"

[[bench]]
name = "database_benchmark"
harness = false
