[package]
name = "neug-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Safe Rust bindings for the NeuG C++ graph database engine"
repository.workspace = true
readme = "../README.md"
keywords = ["database", "graph", "neug", "ffi"]
categories = ["database"]

[dependencies]
neug-sys = { path = "../neug-sys", version = "0.1.0" }
thiserror = "2.0.18"

[dev-dependencies]
criterion = "0.8.2"
rand = "0.8.5"
tempfile = "3.27.0"
time = "0.3.47"

[[bench]]
name = "database_benchmark"
harness = false
