[package]
name = "neug-rust"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Safe Rust bindings for the NeuG C++ graph database engine"
repository.workspace = true
readme = "../README.md"
keywords = ["database", "graph", "neug", "ffi"]
categories = ["database"]

[dependencies]
bincode = "1.3.3"
libc = "0.2.183"
neug-protocol = { path = "../neug-protocol", version = "0.2.0" }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.27.0"
