[package]
name = "neug-protocol"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inter-process communication protocol for the NeuG graph database engine sidecar architecture."

[dependencies]
bincode = "1.3.3"
serde = { version = "1.0.228", features = ["derive"] }
