[package]
name = "neug-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
links = "neug"
description = "Raw FFI bindings for NeuG C++ graph database engine"
repository.workspace = true

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.57"
cmake = "0.1.57"

[dependencies]
libc = "0.2.183"
