[package]
name = "neug-sys"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
links = "neug"
description = "Raw FFI bindings for NeuG C++ graph database engine"
repository.workspace = true
readme = "README.md"

[build-dependencies]
bindgen = "0.72.1"
cc = "1.2.57"
cmake = "0.1.57"

[dependencies]
bincode = "1.3.3"
libc = "0.2.183"
neug-protocol = { path = "../neug-protocol", version = "0.1.0" }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
